tests/semantica/valid/if/test3.ctds
program 
    {
		void main(){
			if(true) then {
				if(true) then {
					return;
				} else {
					if(true) then {
						return;
					}
				}
			}
		}
    }