tests/semantica/invalid/if/test2.ctds
program
	{
		void main(){
			if(2 + true) then {
				
			}
		}
	}